--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "dependencies": {
     "enquirer": "^2.3.2",
     "eslint": "^6.5.1",
+    "jest": "^24.9.0",
     "prettier": "^1.18.2"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
